[package]
name = "autoforward"
version = "0.1.0"
authors = ["Kevin Sillerud <kevin.sillerud@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
tokio-rustls = "0.13"
futures-locks = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.3"
rustls = "0.17"
futures-util = "0.3"

[target.'cfg(unix)'.dependencies]
nix = "0.17"
